load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

go_binary(
    name = "dedecms-checker",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

go_library(
    name = "go_default_library",
    srcs = ["cmd/main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)
